--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schluk Games</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header></header>
     <main> 
         <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="./assets/Schluk Games.png" alt="Logo da Schluk Games">
+            <div class="container__caixa">
+                <h1 class="container__titulo">Com o Schluk Games você tem acesso a diversos jogos e conteúdos gamers de qualidade!</h1>
+                <img src="./assets/Schluk Games.png" alt="Logo da Schluk Games" class="container__imagem">
+                <a href="www.google.com.br" class="container__botao">Descubra mais sobre o projeto!</a>
+                <a hred="www.google.com.br" class="container__botao botao__secundario">Assine Agora Mesmo!</a>
+                <p class="container__aviso">Não fique de fora!</p>
+            </div>
         </section>
     </main>
     <footer></footer>
