Adicionadas segunda e terceira sessão

--- a/index.html
+++ b/index.html
@@ -17,10 +17,27 @@
                 <h1 class="container__titulo">Com o Schluk Games você tem acesso a diversos jogos e conteúdos gamers de qualidade!</h1>
                 <img src="./assets/Schluk Games.png" alt="Logo da Schluk Games" class="container__imagem">
                 <a href="www.google.com.br" class="container__botao">Descubra mais sobre o projeto!</a>
-                <a hred="www.google.com.br" class="container__botao botao__secundario">Assine Agora Mesmo!</a>
+                <a hred="www.google.com.br" class="container__botao botao__secundario">Assine agora mesmo!</a>
                 <p class="container__aviso">Não fique de fora!</p>
             </div>
         </section>
+
+        <section class="container secundario">
+            <img src="./assets/Onde-Quiser.png" alt="Imagem de dispositios computador, playstation e celular" class="secundario__imagem">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Jogue onde quiser!</h2>
+                <p class="descricao__texto">Jogue no seu computador, no seu video game ou até mesmo em celulares!</p>
+            </div>   
+        </section>
+
+        <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">Tenha acesso a centenas de jogos, incluindo seus jogos favoritos!</p>
+                <a href="www.google.com.br" class="container__botao secundario__botao">Ver catálogo</a>
+            </div>
+                <img src="./assets/Jogos-Favoritos.png" alt="Imagem do jogo age of mythology retold" class="secundario__imagem">
+        </section>
+
     </main>
     <footer></footer>
 </body>
