Adicionada última sessão e rodapé

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="container__caixa">
                 <h1 class="container__titulo">Com o Schluk Games você tem acesso a diversos jogos e conteúdos gamers de qualidade!</h1>
                 <img src="./assets/Schluk Games.png" alt="Logo da Schluk Games" class="container__imagem">
-                <a href="www.google.com.br" class="container__botao">Descubra mais sobre o projeto!</a>
-                <a hred="www.google.com.br" class="container__botao botao__secundario">Assine agora mesmo!</a>
+                <a href="#" class="container__botao">Descubra mais sobre o projeto!</a>
+                <a href="#" class="container__botao botao__secundario">Assine agora mesmo!</a>
                 <p class="container__aviso">Não fique de fora!</p>
             </div>
         </section>
 
         <section class="container secundario">
-            <img src="./assets/Onde-Quiser.png" alt="Imagem de dispositios computador, playstation e celular" class="secundario__imagem">
+            <img src="./assets/Onde-Quiser.png" alt="Imagem de dispositivos computador, playstation e celular" class="secundario__imagem">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Jogue onde quiser!</h2>
                 <p class="descricao__texto">Jogue no seu computador, no seu video game ou até mesmo em celulares!</p>
@@ -33,12 +33,56 @@
         <section class="container secundario">
             <div class="container__descricao">
                 <p class="descricao__texto">Tenha acesso a centenas de jogos, incluindo seus jogos favoritos!</p>
-                <a href="www.google.com.br" class="container__botao secundario__botao">Ver catálogo</a>
+                <a href="#" class="container__botao secundario__botao">Ver catálogo</a>
             </div>
                 <img src="./assets/Jogos-Favoritos.png" alt="Imagem do jogo age of mythology retold" class="secundario__imagem">
         </section>
 
+        <section class="container secundario">
+            <img src="./assets/Download-Jogos.png" alt="Imagem contendo o homen aranha, Ryu do Street Fighter, personagens do Call of Duty, uma mão segurando a nuvem e a palavra download" class="secundario__imagem">
+            <div class="container__descricao">   
+                <h2 class="descricao__titulo">Jogue mesmo offline!</h2>             
+                <p class="descricao__texto">Baixe seus jogos do momento e jogue mesmo sem internet!</p>
+                
+            </div>                
+        </section>
+
+        <section class="dispositivos">
+            <h2 class="dispositivos__titulo">Disponível nos seus dispositios favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="./assets/tv.png" alt="Icone de uma televisão">
+                    <h3 class="lista__item">TV</h3>
+                </li>
+                <li>
+                    <img src="./assets/computador.png" alt="Icone de um computador">
+                    <h3 class="lista__item">Computador</h3>
+                </li>
+                <li>
+                    <img src="./assets/celular.png" alt="Icone de um celular">
+                    <h3 class="lista__item">Celular</h3>
+                </li>
+            </ul>
+        </section>
+
     </main>
-    <footer></footer>
+
+    <footer class="rodape">
+        <img src="./assets/Schluk Games.png" alt="Logo Schluk Games" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a class="link__nome" href="#">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a class="link__nome"href="#">Dispositivos Compatíveis</a>
+            </li>
+            <li class="lista__link">
+                <a class="link__nome"href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2024 Schluk Games. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Schluk Games é um serviço pago, baseado em assinatura e sujeito a termos e condições. São Paulo - SP</p>
+    </footer>
+
 </body>
 </html>
