Adicionada responsibilidade mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>   
         </section>
 
-        <section class="container secundario">
+        <section class="container secundario catalogo">
             <div class="container__descricao">
                 <p class="descricao__texto">Tenha acesso a centenas de jogos, incluindo seus jogos favoritos!</p>
                 <a href="#" class="container__botao secundario__botao">Ver catálogo</a>
